--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="num" onclick="calc(4)">4</button><button id="num" onclick="calc(5)">5</button><button id="num" onclick="calc(6)">6</button><button id="num" onclick="calc('-')">-</button>
         <button id="num" onclick="calc(1)">1</button><button id="num" onclick="calc(2)">2</button><button id="num" onclick="calc(3)">3</button><button id="num" onclick="calc('+')">+</button>
         <button></button><button id="num" onclick="calc(0)">0</button><button onclick="calc('.')">.</i></button><button onclick="calc('/')"><i class="fas fa-divide"></i></button>
-        <button onclick="document.getElementById('screen').value = ''">C</button><button></button><button onclick="document.getElementById('screen').value = document.getElementById('screen').value.toString().slice(0, -1)"><i class="far fa-backspace"></i></button><button onclick="math('=')"><i class="fas fa-equals"></i></button>
+        <button onclick="allClear()">C</button><button></button><button onclick="del()"><i class="far fa-backspace"></i></button><button onclick="math('=')"><i class="fas fa-equals"></i></button>
 
     </div>
 
