--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="mainDiv">
-        <input type="text" name="" placeholder="0" id="screen">
+        <input type="text" name="" placeholder="0" id="screen" disabled>
         <button id="num" onclick="calc(7)">7</button><button id="num" onclick="calc(8)">8</button><button id="num" onclick="calc(9)">9</button><button id="num" onclick="calc('*')">x</button>
         <button id="num" onclick="calc(4)">4</button><button id="num" onclick="calc(5)">5</button><button id="num" onclick="calc(6)">6</button><button id="num" onclick="calc('-')">-</button>
         <button id="num" onclick="calc(1)">1</button><button id="num" onclick="calc(2)">2</button><button id="num" onclick="calc(3)">3</button><button id="num" onclick="calc('+')">+</button>
